substrate/frame/support/test/tests/pallet_ui/storage_info_unsatisfied.stderr
error[E0277]: the trait bound `Bar: MaxEncodedLen` is not satisfied
  --> tests/pallet_ui/storage_info_unsatisfied.rs:26:12
   |
26 |     #[pallet::pallet]
   |               ^^^^^^ the trait `MaxEncodedLen` is not implemented for `Bar`
   |
   = help: the following other types implement trait `MaxEncodedLen`:
             bool
             i8
             i16
             i32
             i64
             i128
             u8
             u16
           and $N others
   = note: required for `frame_support::pallet_prelude::StorageValue<_GeneratedPrefixForStorageFoo<T>, Bar>` to implement `StorageInfoTrait`
